# YALS2

./: .gitignore  CMakeLists.txt  README.md  build-win.sh  build.sh  world_converter.py
cmake/: FindGLEW.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
res/: fs1.glsl  overlay_frag.glsl  overlay_vert.glsl  vs1.glsl  world_vert.glsl
res/examples/: acorn.w64  generator_1.w64  glider_gun.w64  r_pentomino.w64  smiley_sm.w64  smiley_sm.wor  test.wor
src/: CMakeLists.txt  base64.c  base64.h  colors.h  fills.c  fills.h  fsutil.c  fsutil.h  game.c  game.h  geom.h  linmath.h  main.c  res_path.c  res_path.h  rules.c  rules.h  serialization.h  world.c  world.h
